# opengl-3d-visualizer

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/models/: Untitled.blend
assets/shaders/: fragment.glsl  vertex.glsl
include/: Camera.h  CollisionShape.h  CollisionSystem.h  FileLoader.h  Mesh.h  PhysicsObject.h  Shader.h  Texture.h
src/: Camera.cpp  CollisionShape.cpp  CollisionSystem.cpp  FileLoader.cpp  Mesh.cpp  PhysicsObject.cpp  Shader.cpp  Texture.cpp  main.cpp
